force-app/main/default/objects/Cargo_Ship__c/Cargo_Ship__c.object-meta.xml
<CustomObject>
    <label>Cargo Ship</label>
    <nameField>
        <label>Ship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cargo Ships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>