force-app/main/default/objects/Cargo_Ship__c/fields/Capitan__c.field-meta.xml
<CustomField>
    <fullName>Capitan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Capitan</label>
    <referenceTo>Capitan__c</referenceTo>
    <relationshipName>Name</relationshipName>
    <type>Lookup</type>
</CustomField>