force-app/main/default/objects/Cargo_Ship__c/fields/Capitan_Phone__c.field-meta.xml
<CustomField>
    <fullName>Capitan_Phone__c</fullName>
    <formula>Capitan__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capitan Phone</label>
    <type>Text</type>
</CustomField>