force-app/main/default/objects/Cargo_Ship__c/fields/Containers_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Containers_Total_Amount__c</fullName>
    <label>Containers Total Amount</label>
    <summaryForeignKey>Container_Tracker__c.Cargo_Ship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>