force-app/main/default/objects/Cargo_Ship__c/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>