force-app/main/default/objects/Cargo_Ship__c/fields/Ship_Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_Capacity_Status__c</fullName>
    <formula>IF( Capacity__c  &lt;  Containers_Total_Amount__c , &quot;The ship is overloaded&quot;, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Capacity Status</label>
    <type>Text</type>
</CustomField>