force-app/main/default/objects/Cargo_Ship__c/fields/Ship_Details__c.field-meta.xml
<CustomField>
    <fullName>Ship_Details__c</fullName>
    <label>Ship Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>