force-app/main/default/objects/Cargo_Ship__c/fields/Ship_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Ship_Tonnage__c</fullName>
    <label>Ship Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>