force-app/main/default/objects/Cargo_Ship__c/recordTypes/Private_Client.recordType-meta.xml
<RecordType>
    <fullName>Private_Client</fullName>
    <active>true</active>
    <label>Private Client</label>
</RecordType>