force-app/main/default/objects/Cargo_Ship__c/validationRules/Contract_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Due_Date</fullName>
    <active>true</active>
    <description>Contract Start Date should be &lt; Contract Due Date</description>
    <errorConditionFormula>Contract_Due_Date__c  &lt;  Contract_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Contract_Due_Date__c</errorDisplayField>
    <errorMessage>Contract Due Date must be greater than Contract Start Date</errorMessage>
</ValidationRule>